@@ -6,17 +6,6 @@ that shows last comments in the portal.
 
 You can select to filter comments by state (if comments are moderated) and also a starting path for searches.
 
-Workflow
-========
-
-This product creates two new workflows for comments: **comment_one_state_workflow** and **comment_review_workflow**.
-
-With these workflows, comments inherits security settings from parents, fixing a Plone issue.
-In this way an user that can't see a content doesn't have catalog access to related comments, so comments are not visibile
-in the portlet.
-
-Installing this product, security settings for old discussions will be updated. Same thing on uninstall step.
-
 Dependencies
 ============
 
