@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_workflow" meta_type="Plone Workflow Tool">
- <object name="comment_review_workflow" meta_type="Workflow"/>
- <object name="comment_one_state_workflow" meta_type="Workflow"/>
- <bindings>
-  <type type_id="Discussion Item">
-   <bound-workflow workflow_id="comment_one_state_workflow"/>
-  </type>
- </bindings>
-</object>
