@@ -1,126 +1,0 @@
-<?xml version="1.0"?>
-<dc-workflow workflow_id="comment_review_workflow"
-             title="Comment Review Workflow"
-             description="A simple review workflow for comments"
-             state_variable="review_state"
-             initial_state="pending">
- <permission>Access contents information</permission>
- <permission>Modify portal content</permission>
- <permission>Reply to item</permission>
- <permission>View</permission>
- <state state_id="pending" title="Pending">
-  <description>Submitted, pending review.
-</description>
-  <exit-transition transition_id="publish"/>
-  <permission-map name="Access contents information"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
-  <permission-map name="Reply to item" acquired="False">
-  </permission-map>
-  <permission-map name="View" acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Reviewer</permission-role>
-  </permission-map>
- </state>
- <state state_id="published" title="Published">
-  <description>Visible to everyone, non-editable.
-</description>
-  <permission-map name="Access contents information"
-                  acquired="True">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
-  <permission-map name="Reply to item" acquired="True">
-  </permission-map>
-  <permission-map name="View" acquired="True">
-   <permission-role>Manager</permission-role>
-   <permission-role>Site Administrator</permission-role>
-  </permission-map>
- </state>
- <transition transition_id="publish"
-             title="Reviewer approves content"
-             new_state="published" trigger="USER"
-             before_script="" after_script="">
-  <description>Approving the comment makes it visible to other users.
-</description>
-  <action url="%(content_url)s/content_status_modify?workflow_action=publish"
-          category="workflow">Approve</action>
-  <guard>
-   <guard-permission>Review comments</guard-permission>
-  </guard>
- </transition>
- <variable variable_id="action" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Previous transition</description>
-  <default>
-   
-   <expression>transition/getId|nothing</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="actor" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>The ID of the user who performed the previous transition
-</description>
-  <default>
-   
-   <expression>user/getUserName</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="comments" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Comment about the last transition
-</description>
-  <default>
-   
-   <expression>python:state_change.kwargs.get('comment', '')</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="review_history" for_catalog="False"
-           for_status="False" update_always="False">
-  <description>Provides access to workflow history
-</description>
-  <default>
-   
-   <expression>state_change/getHistory</expression>
-  </default>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </variable>
- <variable variable_id="time" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>When the previous transition was performed
-</description>
-  <default>
-   
-   <expression>state_change/getDateTime</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
-</dc-workflow>
