@@ -1,5 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_workflow" meta_type="Plone Workflow Tool" purge="False">
- <object name="comment_review_workflow" meta_type="Workflow" remove="True"/>
- <object name="comment_one_state_workflow" meta_type="Workflow" remove="True"/>
-</object>
